@@ -96,7 +96,6 @@ Other
   perform as well as other options.  (Robert Muir)
 
 ======================= Lucene 4.11.0 ======================
-(No Changes)
 
 New Features
 
@@ -105,6 +104,11 @@ New Features
 
 * LUCENE-5889: Add commit method to AnalyzingInfixSuggester, and allow just using .add
   to build up the suggester.  (Varun Thacker via Mike McCandless)
+
+Bug Fixes
+
+* LUCENE-5672: IndexWriter.addIndexes() calls maybeMerge(), to ensure the index stays
+  healthy. If you don't want merging use NoMergePolicy instead. (Robert Muir)
 
 ======================= Lucene 4.10.0 ======================
 
